[package]
name = "schedule1-mixing"
version = "0.1.0"
edition = "2021"

[lib]
name = "schedule1"
path = "src/lib.rs"

[[bin]]
name = "schedule1-mixing-tool"
path = "src/bin.rs"


[dependencies]
bitflags = { features = ["serde"], version = "2.9.0" }
clap = { version = "4.5.36", features = ["derive"] }
indicatif = "0.17.11"
priority-queue = "2.5.0"
rayon = "1.10.0"
savefile = "0.18.6"
savefile-derive = "0.18.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
topological-sort = "0.2.2"
topset = "0.4.0"

[dev-dependencies]
criterion = "0.3"
wide = "0.7.32"
bytemuck = "1.23.1"


[[bench]]
name = "graph"
harness = false
